<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLight"
            android:hint="@string/phone"
            android:id="@+id/phone_number_ed"
            android:padding="@dimen/padding"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLight"
            android:layout_marginTop="@dimen/padding"
            android:hint="@string/password"
            android:id="@+id/password_ed"
            android:padding="@dimen/padding"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:id="@+id/login_page_btn"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_tv"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/register_text"/>
    </LinearLayout>
</RelativeLayout>