<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slogan"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/colorPrimary"
            android:text="@string/slogan"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="@dimen/margin"
        android:layout_alignParentBottom="true">

       <Button
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/margin"
           android:id="@+id/btn_login"
           android:text="@string/login"
           android:background="@color/colorPrimaryDark"
           android:textColor="@color/white"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/btn_register"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_gravity="right"
            android:background="@color/colorPrimaryDark"
            android:text="@string/register"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>